@@ -1,9 +1,8 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.dataFlow;
 
 import com.intellij.codeInsight.*;
 import com.intellij.java.library.JavaLibraryModificationTracker;
-import com.intellij.openapi.project.Project;
 import com.intellij.openapi.roots.ProjectFileIndex;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.psi.*;
@@ -14,14 +13,14 @@ import com.intellij.psi.util.PsiModificationTracker;
 import com.intellij.psi.util.PsiUtil;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
+import one.util.streamex.EntryStream;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 /**
  * Methods to operate on Java contracts
@@ -29,9 +28,6 @@ import java.util.List;
 public final class JavaMethodContractUtil {
   private JavaMethodContractUtil() {}
 
-  /**
-   * JetBrains contract annotation fully-qualified name
-   */
   public static final String ORG_JETBRAINS_ANNOTATIONS_CONTRACT = Contract.class.getName();
 
   /**
@@ -103,8 +99,37 @@ public final class JavaMethodContractUtil {
     boolean pure = Boolean.TRUE.equals(AnnotationUtil.getBooleanAttributeValue(annotation, "pure"));
     String mutates = StringUtil.notNullize(AnnotationUtil.getStringAttributeValue(annotation, MutationSignature.ATTR_MUTATES));
     String resultValue = StreamEx.of(contracts).joining("; ");
-    Project project = annotation.getProject();
-    return DefaultInferredAnnotationProvider.createContractAnnotation(project, pure, resultValue, mutates);
+    String attributes = createAttributesText(resultValue, pure, mutates);
+    if (attributes.isEmpty()) return null;
+    return JavaPsiFacade.getElementFactory(annotation.getProject())
+      .createAnnotationFromText("@" + annotation.getQualifiedName() + "(" + attributes + ")", annotation);
+  }
+
+  /**
+   * Creates a string representing attributes for a method's contract annotation based on provided parameters.
+   *
+   * @param contracts a string describing the method's contracts using the contract syntax
+   * @param pure indicates whether the method is pure (does not modify any state)
+   * @param mutates specifier which describes which method parameters can be mutated during the method cal, if pure is passed as true, this
+   *                argument is ignored.
+   * @return contract arguments as a string, for example <code>value = "null, _ -> false", pure = true</code>
+   */
+  public static @NotNull String createAttributesText(String contracts, boolean pure, String mutates) {
+    @NonNls Map<String, String> attrMap = new LinkedHashMap<>();
+    if (!contracts.isEmpty()) {
+      attrMap.put("value", StringUtil.wrapWithDoubleQuote(contracts));
+    }
+    if (pure) {
+      attrMap.put("pure", "true");
+    }
+    else if (!mutates.trim().isEmpty()) {
+      attrMap.put("mutates", StringUtil.wrapWithDoubleQuote(mutates));
+    }
+    if (attrMap.isEmpty()) {
+      return "";
+    }
+    return attrMap.keySet().equals(Collections.singleton("value")) ?
+           attrMap.get("value") : EntryStream.of(attrMap).join(" = ").joining(", ");
   }
 
   static class ContractInfo {
@@ -207,13 +232,28 @@ public final class JavaMethodContractUtil {
   }
 
   /**
-   * Returns a contract annotation for given method, checking the hierarchy
+   * Returns a contract annotation for a given method, checking the hierarchy
+   *
+   * @param method a method
+   * @param skipExternal to skip external annotations
+   * @return a found annotation (null if not found)
+   */
+  public static @Nullable PsiAnnotation findContractAnnotation(@NotNull PsiMethod method, boolean skipExternal) {
+    return AnnotationUtil.findAnnotationInHierarchy(method,
+                                                    Set.of(StaticAnalysisAnnotationManager.getInstance().getKnownContractAnnotations()),
+                                                    skipExternal);
+  }
+
+  /**
+   * Returns a contract annotation for a given method, checking the hierarchy
    *
    * @param method a method
    * @return a found annotation (null if not found)
    */
   public static @Nullable PsiAnnotation findContractAnnotation(@NotNull PsiMethod method) {
-    return AnnotationUtil.findAnnotationInHierarchy(method, Collections.singleton(ORG_JETBRAINS_ANNOTATIONS_CONTRACT));
+    return AnnotationUtil.findAnnotationInHierarchy(method,
+                                                    Set.of(StaticAnalysisAnnotationManager.getInstance().getKnownContractAnnotations()),
+                                                    false);
   }
 
   /**
